# majsoul-bot

./: .gitignore  README.md  pyproject.toml  rename_tiles.py  requirements.txt
config/: vision_calibration.json
docs/: CONNECTION_TROUBLESHOOTING.md  RECOGNITION_FIX_GUIDE.md  YOLO_RECOGNITION.md
majsoul_bot/: __init__.py  main.py  vision_main.py
majsoul_bot/ai/: __init__.py  simple_ai.py  strategy.py
majsoul_bot/config/: __init__.py  config.example.yaml  example.config.yaml  settings.py
majsoul_bot/controller/: __init__.py  mouse_controller.py
majsoul_bot/game_logic/: __init__.py  hand.py  rules.py  tile.py
majsoul_bot/network/: __init__.py  protocol.py  websocket_client.py
majsoul_bot/tools/: calibrate_regions.py  capture_templates.py  debug_recognition.py  extract_tiles_from_screenshot.py  label_tiles.py  train_tile_ann.py
majsoul_bot/tools/config/: vision_calibration.json
majsoul_bot/utils/: __init__.py  logger.py
majsoul_bot/vision/: __init__.py  game_state_detector.py  regions.py  screen_capture.py  tile_nn_classifier.py  tile_recognizer.py  yolo_tile_detector.py
models/: tile_ann.labels.json
tests/: test_config_settings.py  test_rules.py  test_tile.py  test_tile_recognizer_candidates.py
tools/: auto_calibrate_from_hand.py  calibrate_regions.py  capture_templates.py  convert_templates_to_yolo.py  evaluate_screenshot_batch.py  extract_tiles_from_screenshot.py  label_tiles.py  realtime_yolo_viewer.py  test_connection.py  test_yolo_recognition.py  train_tile_ann.py  train_yolo_tiles.py
tools/config/: vision_calibration.json
